1998-11-18  Evan Lawrence <evan@worldpath.net>

	* src/menus.c: Ditched the foot menu - it's a great
	UI idea, but it needs to be done properly in gnome-app,
	and is just confusing people ATM
	
	* src/gE_prefslib.c: Fixed some things that had broken
	GTK-only prefs - it's still not perfect, but sorta kinda
	works now. Let me know specifics on what's wrong with it,
	if you can find any.

1998-11-15  Alex Roberts  <bse@dial.pipex.com>

	* src/gE_prefs_box.c: Prefrerences now work in non-Gnome
	  (it's taken me over 3 hours to get this damn thing to work!)..

1998-11-08  Chris Lahey  <clahey@umich.edu>

	* src/gedit.c (main): Switched to popt.

1998-10-31  Alex Roberts  <bse@dial.pipex.com>

	* Tidied up Make warnings... Clean build on all ports..

1998-10-29  Alex Roberts  <bse@dial.pipex.com>

	* Upped version numbers to 0.4.8 (in anticipation of next release)

1998-10-29  Alex Roberts  <bse@dial.pipex.com>

	* gE_document.c: When you change document, titlebar changes with the
	  filename...

1998-10-28  Alex Roberts  <bse@dial.pipex.com>

	* toolbar.c: Added Quit button...

1998-10-27  Alex Roberts  <bse@dial.pipex.com>

	* commands.c: (doc_changed_cb): Sets a visible reminder the file has
	  been modified (At last! I've really been meaning to do this ;)...

1998-10-25  Alex Roberts  <bse@dial.pipex.com>

	* gE_document.c: (gE_document_set_read_only): Changes File label to
	  show a visible reminder that the file open is Read-Only or not..
	  (**FIX-ME** This is kinda broke on Untitled files ;)...

1998-10-25  Alex Roberts  <bse@dial.pipex.com>

	* Fixed 'gEdit unable to compile with Gtk+ 1.0.x' bug.. Modified LOTS
	  of files.. mostly putting in '#ifdef GTK_HAVE_FEATURES_1_1_0' -
	  Please remember people.. If you add any Gtk+ 1.1.x ONLY things, 
	  please put in #ifdef GTK_HAVE_FEATURES_1_1_0, some people only run
	  Gtk+ 1.0.x, and dont want the hastle of using Gtk+ 1.1.x (and having
	  Gimp broken ;)...

1998-10-24  Alex Roberts  <bse@dial.pipex.com>
