@@ -1,3 +1,8 @@
+1998-11-19  Evan Lawrence <evan@worldpath.net>
+
+	* src/gE_prefslib.c: More fixes to the prefs system - it
+	seems to be working correctly now...
+
 1998-11-18  Evan Lawrence <evan@worldpath.net>
 
 	* src/menus.c: Ditched the foot menu - it's a great
